<resources>
    <string name="app_name">BukuGaji</string>
    <string name="hitung_gaji_karyawan">Hitung\nGaji Karyawan</string>
    <string name="logo_app">Logo App</string>
    <string name="gajiku">Gajiku</string>
    <string name="gaji_pokok_title">Gaji Pokok</string>
    <string name="lembur_title">Lembur</string>
    <string name="tunjangan_anak_title">Tunjangan Anak</string>
    <string name="potongan_koperasi_title">Potongan Koperasi</string>
    <string name="go_back">go back</string>
    <string name="gaji_bersih_title">Gaji Bersih</string>
    <string name="pilih_jabatan">Pilih Jabatan</string>
</resources>